syntax = "proto3";

package auth;

import "google/api/annotations.proto";

service AuthService {
  rpc GenerateAuthToken(GenerateAuthTokenRequest) returns (GenerateAuthTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token"
      body: "*"
    };
  }

  rpc RefreshAuthToken(RefreshAuthTokenRequest) returns (RefreshAuthTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token/refresh"
      body: "*"
    };
  }

  rpc RevokeAuthToken(RevokeAuthTokenRequest) returns (RevokeAuthTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token/revoke"
      body: "*"
    };
  }
}

message GenerateAuthTokenRequest {
  string username = 1;
  string password = 2;
}

message GenerateAuthTokenResponse {
  string token = 1;
}

message RefreshAuthTokenRequest {
  string token = 1;
}

message RefreshAuthTokenResponse {
  string token = 1;
}

message RevokeAuthTokenRequest {
  string token = 1;
}

message RevokeAuthTokenResponse {}
